bad/bin_op_ge_string_class.example_compiler_output
ERROR
[1mbad/bin_op_ge_string_class.lat:5:5: [1;31merror: [0;1moperator >= is defined only for int values and string values, not `string` and `Y`[m
	"" >= new Y;
	   [1;32m^[m
